# LR8_2024

./: CMakeLists.txt  Lab_8.cpp  README.md  global_utils.cpp  global_utils.h
Task_1/include/: file_utils.h  init_products.h  task_1.h  tools_products.h  utils_products.h
Task_1/src/: Task_1.cpp  file_utils.cpp  init_products.cpp  tools_products.cpp  utils_products.cpp  упрощенный-file_utils.cpp
Task_2/include/: file_utils.h  init_tickets.h  task_2.h  tools_tickets.h  utils_tickets.h
Task_2/src/: Task_2.cpp  file_utils.cpp  init_tickets.cpp  tools_tickets.cpp  utils_tickets.cpp
